# tempoch

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: bump-versions.sh  update-changelog.sh
.github/workflows/: ci.yml  publish.yml  update-time-data.yml
doc/: tempoch-design-smells.md
examples/: periods.rs  quickstart.rs
issues/limitations/: 013-ffi-duplicates-conversion-policy.md  014-public-crates-depend-on-a-non-published-internal-crate.md  015-tdb-tt-accuracy-docs-inconsistent.md  016-tcb-tdb-drops-compensated-pair.md  017-utc-pre-history-silent-extrapolation.md  018-scale-kind-gps-uses-days-not-seconds.md  README.md
scripts/: publish-changed.sh  update_time_data.py
src/: delta_t.rs  julian_date_ext.rs  lib.rs  period.rs  scales.rs
tempoch/: Cargo.toml
tempoch-core/: Cargo.toml
tempoch-core/src/: active_data.rs  axis.rs  civil.rs  compat.rs  constats.rs  context.rs  conversion.rs  coord.rs  delta_t.rs  encoding.rs  eop.rs  error.rs  ext.rs  format.rs  format_conversion.rs  instant.rs  interval.rs  julian_date_ext.rs  lib.rs  period.rs  representation.rs  runtime_data.rs  scalar.rs  scale.rs  scale_conversion.rs  scales.rs  serde.rs  storage.rs  tagged.rs  target.rs  time.rs
tempoch-core/src/data/: active.rs  mod.rs  provenance.rs  status.rs
tempoch-core/src/data/runtime_data/: eop.rs  mod.rs  store.rs  utc_tai.rs
tempoch-core/src/earth/: context.rs  delta_t.rs  eop.rs  mod.rs
tempoch-core/src/encoding/: jd.rs  mjd.rs  mod.rs
tempoch-core/src/features/: mod.rs  serde_impl.rs  tagged.rs  time_instant.rs
tempoch-core/src/format/: chrono.rs  conversion.rs  gnss_week.rs  impls.rs  iso.rs  markers.rs  mod.rs  time_format.rs  traits.rs
tempoch-core/src/foundation/: constats.rs  duration.rs  error.rs  mod.rs  sealed.rs
tempoch-core/src/model/: civil.rs  mod.rs  target.rs  time.rs
tempoch-core/src/model/scale/: conversion.rs  mod.rs
tempoch-core/src/period/: error.rs  mod.rs  series.rs
tempoch-core/src/scale/: conversion.rs  mod.rs
tempoch-core/tests/: proptests.rs
tempoch-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
tempoch-ffi/include/: tempoch_ffi.h
tempoch-ffi/src/: carriers.rs  constats.rs  context.rs  eop.rs  error.rs  gnss.rs  lib.rs  period.rs  status.rs  time.rs  typed.rs
tempoch-ffi/tests/: ffi.rs
tempoch-time-data/: Cargo.toml
tempoch-time-data-updater/: Cargo.toml  README.md
tempoch-time-data-updater/src/: eop.rs  lib.rs  main.rs  parse.rs  render.rs
tempoch-time-data/src/: lib.rs
tempoch-validation/: Cargo.toml
tempoch-validation/data/gnss/: README.md  epochs.csv  epochs.csv.toml
tempoch-validation/src/: lib.rs
tempoch-validation/tests/: gnss_icd.rs
tempoch/examples/: 01_quickstart.rs  02_scales.rs  03_formats.rs  04_periods.rs  05_serde.rs  06_runtime_tables.rs  07_conversions.rs  formats.rs  periods.rs  quickstart.rs  serde.rs  timescales.rs
tempoch/src/: lib.rs
tempoch/tests/: integration.rs  scales_w3.rs
