[workspace]
resolver = "2"
members = [
    "tempoch",
    "tempoch-core",
    "tempoch-ffi",
    "tempoch-time-data",
    "tempoch-validation",
]

# Until siderust-archive 0.1.0 is published to crates.io, source it from git.
# Once the crate is on crates.io, this patch can be removed and the
# `version = "0.1"` dependency in tempoch-time-data resolves directly.
[patch.crates-io]
siderust-archive = { git = "https://github.com/Siderust/archive.git", branch = "main" }
