[package]
name = "tempoch-core"
version = "0.4.2"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Core astronomical time primitives for tempoch."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/tempoch"

[features]
default = []
serde = ["dep:serde", "qtty/serde"]
runtime-data-fetch = ["tempoch-time-data/fetch"]

[lib]
name = "tempoch_core"
path = "src/lib.rs"

[dependencies]
affn = { path = "../../affn", version = "0.6.1" }
chrono = "0.4.43"
qtty = { version = "0.6.1", features = ["julian-time"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
tempoch-time-data = { path = "../tempoch-time-data", version = "0.1.0" }

[dev-dependencies]
serde_json = "1"
