[package]
name = "tempoch-core"
version = "0.6.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Core astronomical time primitives for tempoch."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/tempoch"

[features]
default = []
serde = ["dep:serde", "qtty/serde"]
runtime-data-fetch = ["tempoch-time-data/fetch"]

[lib]
name = "tempoch_core"
path = "src/lib.rs"

[dependencies]
affn = { version = "0.7" }
chrono = "0.4.43"
qtty = { version = "0.8", features = ["julian-time"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
tempoch-time-data = { path = "../tempoch-time-data", version = "0.1.3" }

[dev-dependencies]
serde_json = "1"
proptest = "1"

