[package]
name = "tempoch-ffi"
version = "0.6.4"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "C FFI bindings for tempoch — astronomical time primitives."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/tempoch"
publish    = false

[lib]
name = "tempoch_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tempoch = { path = "../tempoch", version = "0.6.4" }
tempoch-core = { path = "../tempoch-core", version = "0.6.4" }
qtty = "0.8.5"
qtty-ffi = "0.8"
chrono = "0.4.44"

[build-dependencies]
cbindgen = "0.29.2"
