[package]
name = "tempoch-ffi"
version = "0.6.6"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "C FFI bindings for tempoch — astronomical time primitives."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/tempoch"

[lib]
name = "tempoch_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tempoch = { path = "../tempoch", version = "0.6.5" }
tempoch-core = { path = "../tempoch-core", version = "0.6.5" }
qtty = "0.8"
qtty-ffi = "0.8"
chrono = "0.4"

[build-dependencies]
cbindgen = "0.29"
