[package]
name = "tempoch-time-data-updater"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0-only"
description = "Maintenance CLI that regenerates tempoch-core's checked-in time-data tables."

[[bin]]
name = "tempoch-time-data-updater"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tempoch-core = { path = "../tempoch-core", version = "0.4.1", features = ["runtime-data"] }
