[package]
name = "tempoch-time-data"
version = "0.1.3"
edition = "2021"
publish = false
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0-only"
description = "Internal shared time-data support for tempoch."
repository = "https://github.com/Siderust/tempoch"

[features]
default = []
fetch = ["dep:serde_json", "dep:sha2", "dep:ureq"]

[dependencies]
chrono = "0.4.43"
qtty = "0.8.4"
serde_json = { version = "1", optional = true }
sha2 = { version = "0.11", optional = true }
ureq = { version = "3", optional = true }
