[package]
name = "tempoch-time-data"
version = "0.1.3"
edition = "2021"
publish = false
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0-only"
description = "Internal shared time-data support for tempoch."
repository = "https://github.com/Siderust/tempoch"

[features]
default = []
fetch = ["siderust-archive-data/fetch"]

[dependencies]
chrono = "0.4.43"
qtty = "0.8.4"
siderust-archive-data = { path = "../archive/crates/siderust-archive-data" }
