[package]
name = "tempoch"
version = "0.4.3"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Astronomical time primitives: typed time scales, Julian dates, UTC conversion, and interval operations."
license = "AGPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/Siderust/tempoch"
keywords = ["astronomy", "time", "julian-date", "ephemeris", "science"]
categories = ["science", "date-and-time"]

[lib]
name = "tempoch"
path = "src/lib.rs"

[features]
default = []
serde = ["tempoch-core/serde"]
runtime-data-fetch = ["tempoch-core/runtime-data-fetch"]

[dependencies]
tempoch-core = { path = "../tempoch-core", version = "0.4.3" }

[dev-dependencies]
chrono = "0.4.44"
qtty = "0.7.0"
serde_json = "1"

[[example]]
name = "05_serde"
path = "examples/05_serde.rs"
required-features = ["serde"]

[[example]]
name = "06_runtime_tables"
path = "examples/06_runtime_tables.rs"
